# Minimol

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-providers.txt  requirements-ui.txt  requirements.txt
config/: llm_providers.yaml  ui.yaml
minimol/: __init__.py  cli.py  inference.py  llm_router.py  neural_network.py  ollama_manager.py  terminal_ui.py
tests/: __init__.py
